# velocity_skinning_cpp

./: LICENSE  README.md
assets/girafe/: rig_joint  (+2 more)
scene_web/: rig.json  velocity_skinning.json
scenes/: scenes.hpp
vcl/: vcl.hpp
velocity_skinning_cpp/: CMakeLists.txt
velocity_skinning_cpp/assets/dragon/: rig_weights
velocity_skinning_cpp/assets/girafe/: skeleton_connectivity_parent  skeleton_rest_pose_rotation
velocity_skinning_cpp/assets/marine/: skeleton_animation_idle  skeleton_animation_run  skeleton_connectivity
velocity_skinning_cpp/assets/snail/: rig_weights  skeleton_rest_pose_translation
velocity_skinning_cpp/assets/spot/: skeleton_connectivity_parent  skeleton_rest_pose_rotation
velocity_skinning_cpp/main/: main.cpp
velocity_skinning_cpp/main/helper_scene/: helper_scene.cpp  helper_scene.hpp
velocity_skinning_cpp/scene_web/: anim.json  mesh.json
velocity_skinning_cpp/scenes/shared_assets/shaders/depth_map/: shader.frag.glsl
velocity_skinning_cpp/scenes/shared_assets/shaders/normals/: shader.geom.glsl
velocity_skinning_cpp/scenes/sources/squashy_skinning/: helper_skeleton.cpp  skinning_loader.hpp  velocity_tracker.cpp
velocity_skinning_cpp/vcl/base/basic_types/: basic_types.cpp  basic_types.hpp
velocity_skinning_cpp/vcl/base/file/: file.cpp
velocity_skinning_cpp/vcl/base/string/: string.hpp
velocity_skinning_cpp/vcl/containers/buffer/buffer/: buffer.hpp
velocity_skinning_cpp/vcl/containers/buffer_stack/: buffer_stack.hpp
velocity_skinning_cpp/vcl/interaction/camera/: camera.cpp
velocity_skinning_cpp/vcl/opengl/texture/texture_gpu/: texture_gpu.hpp
velocity_skinning_cpp/vcl/shape/mesh/mesh_drawable/mesh_drawable_gpu_data/: mesh_drawable_gpu_data.hpp
velocity_skinning_cpp/vcl_advanced/: vcl_advanced.hpp
velocity_skinning_cpp/vcl_advanced/file/: file.hpp
(+125 files in other folders)
